new version - flex+grid

--- a/desarrolloweb-ch/pages/partners.html
+++ b/desarrolloweb-ch/pages/partners.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!-- configuracion de dispositivo-->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">  <!--icono de web en pestaña-->
-    <title>datarustic - Inicio</title> <!-- nombre de web, aparece en pestaña-->
+    <title>datarustic - Partners</title> <!-- nombre de web, aparece en pestaña-->
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
-        <div>
-            <div class="inlineblock" id="header-logo">
+        <div id="flexheader">
+            <div id="header-logo">
                 <img src="../img/rd-logo.png" alt="" width="60px" >
             </div>
-            <div class="inlineblock" id ="header-menu">
+            <div  id ="header-menu">
                 <ul >
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="servicios.html">Servicios</a></li> 
@@ -28,37 +28,49 @@
     <div class="body-page" >
         <h1>Partners</h1>
         <div class="partner-container">
-            <div id="partner1">
+            <div class="partnersIndividual">
                 <img src="../img/amigos-de-la-chamba.png" alt="amigos de la chamba">
+                <div>
+                    <h4>Amigos de la chamba</h4>
+                    <p>"Amigos de la Chamba" brinda espacios de coworking modernos y flexibles. Nuestra comunidad fomenta la colaboración y el crecimiento profesional. Únete a nosotros para aprovechar nuestros servicios de calidad y potenciar tu éxito laboral en un ambiente inspirador.</p>
+                </div>
             </div>
-            <div id="partner2">
+            <div class="partnersIndividual">
                 <img src="../img/ceralos.png" alt="ceralos">
+                <div>
+                    <h4>Ceriallos</h4>
+                    <p>Tu fuente de cereales de alta calidad. Nuestra fábrica produce deliciosos cereales llenos de sabor y nutrientes. Combinamos ingredientes frescos y procesos innovadores para ofrecerte una experiencia de desayuno excepcional. ¡Disfruta de Ceriallos y comienza tu día con energía!</p>
+                </div>
             </div>
-            <div id="partner3">
+            <div class="partnersIndividual">
                 <img src="../img/arctic-burger.png" alt="arctic burger">
+                <div>
+                    <h4>Arctic Burger</h4>
+                    <p>""Arctic Burger" te lleva a un viaje gastronómico polar. Nuestra cadena de hamburguesas ofrece sabores únicos y frescos, con ingredientes de calidad. Descubre nuestras deliciosas creaciones y disfruta de la experiencia de "Arctic Burger" en cada bocado.</p>
+                </div>  
             </div>
         </div>
     </div>
 
     <footer>
-        
-        <div id="footer-logo">
-            <img src="../img/rd-logo.png" alt="" width="80px">
+        <div id="footer-container">
+            <div id="footer-logo">
+                <img src="../img/rd-logo.png" alt="" width="80px">
+            </div>
+            <div id="footer-cop">
+                <h3>© 2023  RusticData Todos los derechos reservados.</h3>
+            </div>
+            <div id="footer-menu">
+                <h3>Opciones Web</h3>
+                <ul>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="servicios.html">Servicios</a></li> 
+                    <li><a href="partners.html">Partners</a></li> 
+                    <li><a href="contacto.html">Contacto</a></li> 
+                    <li><a href="donde_estamos.html">¿Donde estamos?</a></li>  
+                </ul>
+            </div>
         </div>
-        <div id="footer-cop">
-            <h3>© 2023  RusticData Todos los derechos reservados.</h3>
-        </div>
-        <div id="footer-menu">
-            <h3>Opciones Web</h3>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="servicios.html">Servicios</a></li> 
-                <li><a href="partners.html">Partners</a></li> 
-                <li><a href="contacto.html">Contacto</a></li> 
-                <li><a href="donde_estamos.html">¿Donde estamos?</a></li>  
-            </ul>
-        </div>
-
     </footer>
 </body>
 </html>
