--- a/desarrolloweb-ch/index.html
+++ b/desarrolloweb-ch/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header>
-        <div>
-            <div class="inlineblock" id="header-logo">
-                <img src="./img/rd-logo.png" alt="" width="60px" >
+        <div id="flexheader">
+            <div id="header-logo">
+                <img src="./img/rd-logo.png" alt="" width="70px" >
             </div>
-            <div class="inlineblock" id ="header-menu">
+            <div id ="header-menu">
                 <ul>
                     <li><a href="#">Inicio</a></li>
                     <li><a href="./pages/servicios.html">Servicios</a></li> 
@@ -35,21 +35,23 @@
     </div>
 
     <footer>
-        <div id="footer-logo">
-            <img src="./img/rd-logo.png" alt="" width="80px">
-        </div>
-        <div id="footer-cop">
-            <h3>© 2023  RusticData Todos los derechos reservados.</h3>
-        </div>
-        <div id="footer-menu">
-            <h3>Opciones Web</h3>
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="./pages/servicios.html">Servicios</a></li> 
-                <li><a href="./pages/partners.html">Partners</a></li> 
-                <li><a href="./pages/contacto.html">Contacto</a></li> 
-                <li><a href="./pages/donde_estamos.html">¿Donde estamos?</a></li>  
-            </ul>
+        <div id="footer-container">
+            <div id="footer-logo">
+                <img src="./img/rd-logo.png" alt="" width="80px">
+            </div>
+            <div id="footer-cop">
+                <h3>© 2023  RusticData Todos los derechos reservados.</h3>
+            </div>
+            <div id="footer-menu">
+                <h3>Opciones Web</h3>
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="./pages/servicios.html">Servicios</a></li> 
+                    <li><a href="./pages/partners.html">Partners</a></li> 
+                    <li><a href="./pages/contacto.html">Contacto</a></li> 
+                    <li><a href="./pages/donde_estamos.html">¿Donde estamos?</a></li>  
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
