--- a/desarrolloweb-ch/pages/contacto.html
+++ b/desarrolloweb-ch/pages/contacto.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!-- configuracion de dispositivo-->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">  <!--icono de web en pestaña-->
-    <title>datarustic - Inicio</title> <!-- nombre de web, aparece en pestaña-->
+    <title>datarustic - Contacto</title> <!-- nombre de web, aparece en pestaña-->
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
-        <div>
-            <div class="inlineblock" id="header-logo">
+        <div id="flexheader">
+            <div id="header-logo">
                 <img src="../img/rd-logo.png" alt="" width="60px" >
             </div>
-            <div class="inlineblock" id ="header-menu">
+            <div id ="header-menu">
                 <ul >
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="servicios.html">Servicios</a></li> 
@@ -43,24 +43,24 @@
     </div>
 
     <footer>
-        
-        <div id="footer-logo">
-            <img src="../img/rd-logo.png" alt="" width="80px">
+        <div id="footer-container">
+            <div id="footer-logo">
+                <img src="../img/rd-logo.png" alt="" width="80px">
+            </div>
+            <div id="footer-cop">
+                <h3>© 2023  RusticData Todos los derechos reservados.</h3>
+            </div>
+            <div id="footer-menu">
+                <h3>Opciones Web</h3>
+                <ul>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="servicios.html">Servicios</a></li> 
+                    <li><a href="partners.html">Partners</a></li> 
+                    <li><a href="contacto.html">Contacto</a></li> 
+                    <li><a href="donde_estamos.html">¿Donde estamos?</a></li>  
+                </ul>
+            </div>
         </div>
-        <div id="footer-cop">
-            <h3>© 2023  RusticData Todos los derechos reservados.</h3>
-        </div>
-        <div id="footer-menu">
-            <h3>Opciones Web</h3>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="servicios.html">Servicios</a></li> 
-                <li><a href="partners.html">Partners</a></li> 
-                <li><a href="contacto.html">Contacto</a></li> 
-                <li><a href="donde_estamos.html">¿Donde estamos?</a></li>  
-            </ul>
-        </div>
-
     </footer>
 </body>
 </html>
